// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests DropdownSelector AssistiveText 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-describedby="test-id"
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
      <div
        className="charcoal-text-field-assistive-text"
        data-invalid={false}
        id="test-id"
      >
        assistiveText
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector CustomChildren 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="bold"
        >
          <option
            value="normal"
          >
            normal
          </option>
          <option
            value="bold"
          >
            bold
          </option>
          <option
            value="italic"
          >
            italic
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          <div
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Bold
          </div>
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Default 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        />
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value=""
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        />
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Disabled 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      aria-disabled={true}
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector DisabledItem 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="2"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            disabled={true}
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
          <option
            value="4"
          >
            4
          </option>
          <option
            value="5"
          >
            5
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 2 (disabled)
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector InFormTag 1`] = `
<div
  data-dark={false}
>
  <form
    onSubmit={[Function]}
    style={
      Object {
        "display": "flex",
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          name="exampleOption"
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
    <button
      className="charcoal-button"
      data-variant="Primary"
      style={
        Object {
          "marginLeft": 16,
        }
      }
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`Storybook Tests DropdownSelector InModal 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "height": "10px",
      }
    }
  >
    <button
      onClick={[Function]}
    >
      open
    </button>
    <div
      className="charcoal-modal-background"
      data-bottom-sheet="full"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
          "zIndex": 10,
        }
      }
    >
      <div
        className="charcoal-modal-dialog"
        data-bottom-sheet="full"
        onKeyDown={[Function]}
        role="dialog"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="charcoal-modal-header-root"
          data-bottom-sheet="full"
        >
          <div
            className="charcoal-modal-header-title"
          >
            modal
          </div>
        </div>
        <div
          className="charcoal-modal-body"
        >
          <div
            style={
              Object {
                "display": "grid",
                "gap": 40,
                "padding": 16,
              }
            }
          >
            <div
              className="charcoal-dropdown-selector-root"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                  id="test-id"
                >
                  DropdownSelector1
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                aria-hidden="true"
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <select
                  onChange={[Function]}
                  tabIndex={-1}
                  value="1"
                >
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                </select>
              </div>
              <button
                aria-describedby="test-id"
                aria-labelledby="test-id"
                className="charcoal-dropdown-selector-button"
                data-active={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="charcoal-ui-dropdown-selector-text"
                  data-placeholder={false}
                >
                  Option 1
                </span>
                <pixiv-icon
                  class="charcoal-ui-dropdown-selector-icon"
                  name="16/Menu"
                />
              </button>
              <div
                className="charcoal-text-field-assistive-text"
                data-invalid={false}
                id="test-id"
              >
                assistiveText
              </div>
            </div>
            <div
              aria-disabled={false}
              className="charcoal-text-field-root"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                  htmlFor="test-id"
                  id="test-id"
                >
                  TextField
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                className="charcoal-text-field-container"
                data-invalid={false}
              >
                <input
                  aria-describedby="test-id"
                  aria-labelledby="test-id"
                  className="charcoal-text-field-input"
                  data-invalid={false}
                  disabled={false}
                  id="test-id"
                  onChange={[Function]}
                  placeholder="placeholder"
                  type="text"
                />
              </div>
              <div
                className="charcoal-text-field-assistive-text"
                data-invalid={false}
                id="test-id"
              >
                assistiveText
              </div>
            </div>
            <div
              aria-disabled={false}
              className="charcoal-text-area-root"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                  htmlFor="test-id"
                  id="test-id"
                >
                  TextArea
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                aria-invalid={false}
                className="charcoal-text-area-container"
                style={
                  Object {
                    "--charcoal-text-area-rows": "4",
                  }
                }
              >
                <textarea
                  aria-describedby="test-id"
                  aria-labelledby="test-id"
                  className="charcoal-text-area-textarea"
                  data-no-bottom-padding={false}
                  disabled={false}
                  id="test-id"
                  onChange={[Function]}
                  placeholder="placeholder"
                  rows={4}
                />
              </div>
              <div
                className="charcoal-text-field-assistive-text"
                data-invalid={false}
                id="test-id"
              >
                assistiveText
              </div>
            </div>
            <div
              className="charcoal-dropdown-selector-root"
            >
              <div
                className="charcoal-field-label-root"
              >
                <label
                  className="charcoal-field-label"
                  id="test-id"
                >
                  DropdownSelector2
                </label>
                <div
                  className="charcoal-field-label-required-text"
                >
                  required
                </div>
                <div
                  className="charcoal-field-label-sub-label"
                >
                  <span />
                </div>
              </div>
              <div
                aria-hidden="true"
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0 0 0 0)",
                    "clipPath": "inset(50%)",
                    "height": "1px",
                    "margin": "-1px",
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": "1px",
                  }
                }
              >
                <select
                  onChange={[Function]}
                  tabIndex={-1}
                  value="2"
                >
                  <option
                    value="1"
                  >
                    1
                  </option>
                  <option
                    value="2"
                  >
                    2
                  </option>
                  <option
                    value="3"
                  >
                    3
                  </option>
                </select>
              </div>
              <button
                aria-describedby="test-id"
                aria-labelledby="test-id"
                className="charcoal-dropdown-selector-button"
                data-active={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="charcoal-ui-dropdown-selector-text"
                  data-placeholder={false}
                >
                  Option 2
                </span>
                <pixiv-icon
                  class="charcoal-ui-dropdown-selector-icon"
                  name="16/Menu"
                />
              </button>
              <div
                className="charcoal-text-field-assistive-text"
                data-invalid={false}
                id="test-id"
              >
                assistiveText
              </div>
            </div>
          </div>
        </div>
        <button
          className="charcoal-icon-button charcoal-modal-close-button"
          data-active={false}
          data-size="S"
          data-variant="Default"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Invalid 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-invalid={true}
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector InvalidAssistiveText 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-describedby="test-id"
        aria-invalid={true}
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
      <div
        className="charcoal-text-field-assistive-text"
        data-invalid={true}
        id="test-id"
      >
        assistiveText
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Label 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector LongNames 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector RequiredText 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-required-text"
        >
          required
        </div>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector Section 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span />
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="banana"
        >
          <option
            value="apple"
          >
            apple
          </option>
          <option
            value="banana"
          >
            banana
          </option>
          <option
            value="orange"
          >
            orange
          </option>
          <option
            value="bicycle"
          >
            bicycle
          </option>
          <option
            value="car"
          >
            car
          </option>
          <option
            value="train"
          >
            train
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Banana
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests DropdownSelector SubLabel 1`] = `
<div
  data-dark={false}
>
  <div
    style={
      Object {
        "width": 288,
      }
    }
  >
    <div
      className="charcoal-dropdown-selector-root"
    >
      <div
        className="charcoal-field-label-root"
      >
        <label
          className="charcoal-field-label"
          id="test-id"
        >
          Label
        </label>
        <div
          className="charcoal-field-label-sub-label"
        >
          <span>
            SubLabel
          </span>
        </div>
      </div>
      <div
        aria-hidden="true"
        style={
          Object {
            "border": 0,
            "clip": "rect(0 0 0 0)",
            "clipPath": "inset(50%)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
      >
        <select
          onChange={[Function]}
          tabIndex={-1}
          value="1"
        >
          <option
            value="1"
          >
            1
          </option>
          <option
            value="2"
          >
            2
          </option>
          <option
            value="3"
          >
            3
          </option>
        </select>
      </div>
      <button
        aria-labelledby="test-id"
        className="charcoal-dropdown-selector-button"
        data-active={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="charcoal-ui-dropdown-selector-text"
          data-placeholder={false}
        >
          Option 1
        </span>
        <pixiv-icon
          class="charcoal-ui-dropdown-selector-icon"
          name="16/Menu"
        />
      </button>
    </div>
  </div>
</div>
`;
